--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1342,3 +1342,47 @@ ninja-keys::part(ninja-input-wrapper) {
   background-color: var(--global-theme-color);
   color: var(--global-text-color);
 }
+
+.styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+ .styled-table thead tr {
+    background-color: var(--global-hover-color);
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th{
+  padding: 12px 15px;
+  font-weight: bold;
+  text-align: left;
+     border-right: 1px solid var(--global-hover-color);
+}
+
+.styled-table td {
+    padding: 12px 15px;
+     border-right: 1px solid var(--global-hover-color);
+}
+
+.styled-table tbody tr {
+    border-bottom: thin solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid var(--global-hover-color);
+}
+
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: var(--global-hover-color);
+}
