--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -11,13 +11,13 @@
   --global-text-color-light: #{$grey-color};
   --global-theme-color: #{#0066a2};
   --global-hover-color: #{#00A6D6};
-  --global-hover-text-color: #{$white-color};
+  --global-hover-text-color: #{#00A6D6};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
-  --global-footer-link-color: #{$white-color};
+  --global-footer-link-color: #{#00A6D6};
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0, 0, 0, 0.1);
-  --global-card-bg-color: #{$white-color};
+  --global-card-bg-color: #{#00A6D6};
   --global-highlight-color: #{$red-color-dark};
   --global-back-to-top-bg-color: rgba(
     #{color.channel($black-color, "red", $space: rgb)},
