--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -16,7 +16,7 @@
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{#00A6D6};
   --global-distill-app-color: #{$grey-color};
-  --global-divider-color: rgba(0, 0, 0, 0.1);
+  --global-divider-color: #A9A9A9;
   --global-card-bg-color: #{#00A6D6};
   --global-highlight-color: #{$red-color-dark};
   --global-back-to-top-bg-color: rgba(
